# BitwigLauncher

./: .gitignore  Cargo.toml  build.rs  config.yml  license  readme.md
src/: config.yml  main.rs
