[package]
name = "bitwig_launcher"
version = "0.1.0"
authors = ["lokanchung <lokanchung@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
winres = "*"

[dependencies]
winreg = "0.7"
serde = {version ="1.0", features = ["derive"]}
serde_yaml = "0.8"
serde_bytes = "*"
native-windows-gui = "*"